# fastapi-test

./: README.md  test ready.txt  test.db
app/: crud.py  database.py  main.py  models.py
fastapi/: pyproject.toml
fastapi/app/: database.py  main.py
