[tool.poetry]
name = "my-fastapi-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.36"
databases = "^0.5.5"
pydantic = "^1.9.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
